Fix footer css alignment

--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ a:visited {
     font-size: 13px;
     position: relative;
     z-index: 5;
+    text-align: center;
 }
 
 #features {
